// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table add attribute emits an event 1`] = `
Array [
  Object {
    "data": Object {
      "columnId": "source/column",
      "datatype": undefined,
      "language": undefined,
      "name": "foo-bar",
      "predicate": "http://schema.org/name",
      "tableId": "example/table",
    },
    "name": "AttributeAdded",
  },
]
`;

exports[`table add attribute return expected state 1`] = `
Object {
  "@id": "example/table/attribute/foo-bar",
  "@type": "Attribute",
  "column": "source/column",
  "datatype": "http://www.w3.org/2001/XMLSchema#string",
  "language": undefined,
  "name": "foo-bar",
  "predicate": "http://schema.org/name",
  "tableId": "example/table",
}
`;
